alteracao swagger e model
