# backend/src/api/billingCycle/billingCycleService.js
@@ -1,42 +1,26 @@
-/**criação da API REST  em cima do modelo ja criado*/
-
 const BillingCycle = require("./billingCycle");
 const errorHandler = require("../common/errorHandler");
-
-//metodos que seram aceitos pela API
-// BillingCycle.methods(["get", "post", "put", "delete"]);
-
-/**comando para o metodo put não burlar as validações do banco
- * "new: true" - sempre ira trazer o objeto ja atualizado, por padrão traz o antigo
- * "runValidators: true" - sempre ira fazer validações de todo o schema antes de atualizar
- */
-// BillingCycle.updateOptions({ new: true, runValidators: true });
-
-//aplicação de tratamento da mensagem de erro apos o post e put com midleware erroHandler
-// BillingCycle.after("post", errorHandler).after("put", errorHandler);
-
-/**codigo feito pois a versão do node-restful apresenta problemas
- * sugerido pela equipe do curso:
- * um codigo onde o mongoose ira procurar todos os registros
- * caso não encontre erro ira retornar todos os documentos
- * caso tenha ira retornar mensagem de erro proveniente do banco
- */
 
 const insert = async (req, res) => {
   // #swagger.tags = ['BillingCycle']
   // #swagger.description = 'Endpoint para inserir novos pagamentos.'
   const data = new BillingCycle({
     name: req.body.name,
-    month: req.body.month,
-    year: req.body.year,
-    credits: {
-      name: req.body.credits.name,
-      value: req.body.credits.value,
-    },
-    debts: {
-      name: req.body.debts.name,
-      value: req.body.debts.value,
-      status: req.body.debts.status,
+    email: req.body.email,
+    password: req.body.password,
+    billingCycle: {
+      name: req.body.billingCycle.name,
+      month: req.body.billingCycle.month,
+      year: req.body.billingCycle.year,
+      credits: {
+        name: req.body.billingCycle.credits.name,
+        value: req.body.billingCycle.credits.value,
+      },
+      debts: {
+        name: req.body.billingCycle.debts.name,
+        value: req.body.billingCycle.debts.value,
+        status: req.body.billingCycle.debts.status,
+      },
     },
   });
 
@@ -44,8 +28,8 @@ const insert = async (req, res) => {
     const dataToSave = await data.save();
     /* #swagger.responses[201] = { 
       schema: { $ref: "#/definitions/BillingCycle" },
-               description: 'Cadastro efetuado.' 
-        } */
+      description: 'Cadastro efetuado.' 
+    } */
     return res.status(201).json(dataToSave);
   } catch (error) {
     return res.status(400).json({ error: error.message });
@@ -55,9 +39,10 @@ const insert = async (req, res) => {
 const get = async (req, res) => {
   // #swagger.tags = ['BillingCycle']
   // #swagger.description = 'Endpoint para recuperar todos os pagamentos do usuário'
+  const id = req.body.id;
   try {
-    const item = await BillingCycle.find();
-    return res.json(item);
+    const item = await BillingCycle.findById(id);
+    return res.json(item.billingCycle);
   } catch (error) {
     return res.status(500).json({ errors: error.message });
   }
@@ -67,8 +52,10 @@ const count = async (req, res) => {
   // #swagger.tags = ['BillingCycle']
   // #swagger.description = 'Endpoint para informar quantos pagamentos existem'
   try {
-    const item = await BillingCycle.count();
-    return res.json({ item });
+    const id = req.body.id;
+    const item = await BillingCycle.findById(id);
+    // const item = await BillingCycle.count();
+    return res.json(item.billingCycle.length);
   } catch (error) {
     return res.status(500).json({ errors: error.message });
   }
@@ -136,60 +123,5 @@ const update = async (req, res) => {
     res.status(400).json({ message: error.message });
   }
 };
-// BillingCycle.route("get", (req, res, next) => {
-//   BillingCycle.find({}, (err, docs) => {
-//     if (!err) {
-//       res.json(docs);
-//     } else {
-//       res.status(500).json({ errors: [error] });
-//     }
-//   });
-// });
-
-// //serviços da aplicação
-
-// //rota para contagem de elementos no banco
-// BillingCycle.route("count", (req, res, next) => {
-//   BillingCycle.count((error, value) => {
-//     if (error) {
-//       res.status(500).json({ errors: [error] });
-//     } else {
-//       res.json({ value });
-//     }
-//   });
-// });
-
-// /**sumario de pagamentos
-//  * comandos: project e group vem do mongodb
-//  * project: projeção de determinados atriutos
-//  * group: agrupamento de valores
-//  */
-// BillingCycle.route("summary", (req, res, next) => {
-//   BillingCycle.aggregate([
-//     {
-//       //agregação e projeção de somente os valores de credito e debitos
-//       $project: {
-//         credit: { $sum: "$credits.value" },
-//         debt: { $sum: "$debts.value" },
-//       },
-//     },
-//     {
-//       $group: {
-//         _id: null,
-//         credit: { $sum: "$credit" },
-//         debt: { $sum: "$debt" },
-//       },
-//     },
-//     {
-//       $project: { _id: 0, credit: 1, debt: 1 },
-//     },
-//   ]).exec((error, result) => {
-//     if (error) {
-//       res.status(500).json({ errors: [error] });
-//     } else {
-//       res.json(result[0] || { credit: 0, debt: 0 });
-//     }
-//   });
-// });
 
 module.exports = { count, summary, get, insert, remove, update };
